# fc-empire

./: MATCH_ENGINE_NATIVE_README.md  NATIVE_DAT_INTEGRATION.md  fix_gradle_repos_termux.sh  package.json
.github/workflows/: build-apk.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/db/: chn.lng  dut.lng  eng.lng  esp.lng  fra.lng  ger.lng  id.lng  ita.lng  jpn.lng  kor.lng  lat.lng  pol.lng  por.lng  tch.lng  th.lng  tur.lng
android/app/src/main/assets/public/: index.html
android/app/src/main/assets/public/css/: style.css
android/app/src/main/assets/public/data/: clubs.json  world_data_meta.json
android/app/src/main/assets/public/js/engine/: db.js  match_engine_bridge.js  transfers.js
android/app/src/main/assets/public/js/ui/: ui.js
android/app/src/main/cpp/: CMakeLists.txt  DatParser.cpp  DatParser.h  DatReader.cpp  DatReader.h  NativeDbBridge.cpp  NativeMatchBridge.cpp  ball.cpp  ball.h  match_engine.cpp  match_engine.h  player.cpp  player.h  simulation.cpp  simulation.h  tactics.cpp  tactics.h  team.cpp  team.h
android/app/src/main/java/com/capmaster2023/footballempire/: DatDbPlugin.java  MainActivity.java  MatchEnginePlugin.java
android/app/src/main/res/values/: styles.xml
scripts/: DATA_ZIP_INTEGRATION_NOTES.md
www/data/: leagues.json
www/js/engine/: finance.js  game.js  live.js  owner.js
